--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </div>
     </div>
 <script src="https://utteranc.es/client.js"
-        repo="Abcd136/x"
+        repo="Abcd136/x32"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
